feat: add new line to prompts

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -30,7 +30,7 @@ $battery\
 $time
 $character"""
 
-add_newline = false
+add_newline = true
 
 # ============================================
 # PROMPT CHARACTER
