feat: improve ssh config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,3 +1,27 @@
-Host *
-    IgnoreUnknown UseKeychain
-    UseKeychain yes
+# Hostinger VPS - Ghost CMS blogs
+Host ghosts                                                                                  
+    HostName ghosts.hostinger.local                                                          
+    User root 
+
+# Sky Lab
+Host dev
+    HostName dev.sky.lab
+    User coder
+    Port 2222
+
+Host galaxy
+    HostName galaxy.sky.lab
+    User skylight
+
+Host loki
+    HostName loki.sky.lab
+    User skylight
+
+# Global defaults
+Host *                                                                                                         
+    IgnoreUnknown UseKeychain                                                                                  
+    UseKeychain yes                                                                                            
+    AddKeysToAgent yes                                                                                         
+    IdentityFile ~/.ssh/id_rsa                                                                                 
+    ServerAliveInterval 60                                                                                     
+    ServerAliveCountMax 3                                                                                      
