chore: add host

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -4,10 +4,14 @@ Host ghosts
     User root 
 
 # Sky Lab
-Host dev
+Host coder
     HostName dev.sky.lab
     User coder
     Port 2222
+
+Host dev
+    Hostname dev.sky.lab
+    User skylight
 
 Host galaxy
     HostName galaxy.sky.lab
